# tfel-plot

./: CMakeLists.txt  INSTALL.md  Makefile.am  README.md  bootstrap.sh  check_all.sh  clean.sh  configure.ac
cmake/modules/: Makefile.am  clang.cmake  common-compiler-flags.cmake  compiler.cmake  gcc.cmake  msvc.cmake  pathscale.cmake  qt.cmake  tfel-graphics.cmake  tfel-plot.cmake  tfel.cmake
docs/: CMakeLists.txt  Makefile.am
docs/tplot/: CMakeLists.txt  Makefile.am
docs/tplot/gp/: CMakeLists.txt  Makefile.am  include.md
examples/: example1.gp
include/: CMakeLists.txt  Makefile.am
include/TFEL/Plot/: ArrowStyle.hxx  Config.hxx  Curve.hxx  CurveBase.hxx  CurveConfigurationAction.hxx  CurveConfigurationDialog.hxx  CurveConfigurationDialogBase.hxx  DataCurve.hxx  EvaluatedCurve.hxx  GnuplotFitInterpreter.hxx  GnuplotImportInterpreter.hxx  GnuplotInterpreter.hxx  GnuplotInterpreterBase.hxx  GnuplotInterpreterBase.ixx  GnuplotKrigingInterpreter.hxx  GnuplotPlotInterpreter.hxx  GnuplotSetInterpreter.hxx  GnuplotUnSetInterpreter.hxx  Graph.hxx  GraphBorderItem.hxx  GraphConfigurationDialog.hxx  GraphCoordinates.hxx  GraphCurveItem.hxx  GraphKeyItem.hxx  GraphLayout.hxx  GraphShell.hxx  GraphSize.hxx  GraphTextItem.hxx  GraphTheme.hxx  Grid.hxx  ImportAlcyoneCurveDialog.hxx  ImportLicosCurveDialog.hxx  ImportLicosResultsDialog.hxx  ImportMTestResultsDialog.hxx  ImportTextDataDialog.hxx  ImportTextDataDialogBase.hxx  InitRessources.hxx  Point.hxx  StandardGraphTheme.hxx  TextDataReader.hxx  (+3 more)
include/TFEL/Plot/Config/: GetInstallPath.hxx
m4/: gxx.m4  m4-ax_have_qt.m4
src/: CMakeLists.txt  Makefile.am
src/Plot/: ArrowStyle.cxx  CEAGraphTheme.cxx  CMakeLists.txt  Curve.cxx  CurveBase.cxx  CurveConfigurationAction.cxx  CurveConfigurationDialog.cxx  CurveConfigurationDialogBase.cxx  DataCurve.cxx  ElegantGraphTheme.cxx  EvaluatedCurve.cxx  GetInstallPath-Prefix.hxx.in  GetInstallPath.cxx  GetInstallPath.cxx.in  GnuplotFitInterpreter.cxx  GnuplotImportInterpreter.cxx  GnuplotInterpreter.cxx  GnuplotInterpreterBase.cxx  GnuplotKrigingInterpreter.cxx  GnuplotPlotInterpreter.cxx  GnuplotSetInterpreter.cxx  GnuplotUnSetInterpreter.cxx  Graph.cxx  GraphBorderItem.cxx  GraphConfigurationDialog.cxx  GraphCoordinates.cxx  GraphCurveItem.cxx  GraphKeyItem.cxx  GraphShell.cxx  GraphTextItem.cxx  GraphTheme.cxx  ImportAlcyoneCurveDialog.cxx  ImportLicosCurveDialog.cxx  ImportLicosResultsDialog.cxx  ImportMTestResultsDialog.cxx  ImportTextDataDialog.cxx  ImportTextDataDialogBase.cxx  InitRessources.cxx  MFrontGraphTheme.cxx  Makefile.am  (+5 more)
tests/: CMakeLists.txt  GnuplotInterpreterTest.cxx  Makefile.am  cos_wrapport.cxx  diff.gp  import-c.gp
tfel-plot-config/: CMakeLists.txt  Makefile.am  tfel-plot-config.cxx
tplot/: Makefile.am
tplot/include/: CMakeLists.txt  Makefile.am
tplot/include/TFEL/Plot/: CLIHandler.hxx  TPlot.hxx  TPlotCLIApplication.hxx
tplot/src/: CLIHandler.cxx  CMakeLists.txt  Makefile.am  TPlot.cxx  TPlotCLIApplication.cxx  ressources.qrc  tplot-gui.cxx  tplot-main.cxx  tplot.cxx
