## Makefile.am -- Process this file with automake to produce a Makefile.in file.

nobase_include_HEADERS = TFEL/Plot/Config.hxx	                \
			 TFEL/Plot/ArrowStyle.hxx	                \
			 TFEL/Plot/GraphSize.hxx	                \
			 TFEL/Plot/GraphCoordinates.hxx	        \
			 TFEL/Plot/Point.hxx		        \
			 TFEL/Plot/GraphLayout.hxx	                \
			 TFEL/Plot/GraphTheme.hxx	                \
			 TFEL/Plot/StandardGraphTheme.hxx           \
			 TFEL/Plot/Curve.hxx                        \
			 TFEL/Plot/CurveBase.hxx                    \
			 TFEL/Plot/EvaluatedCurve.hxx	        \
			 TFEL/Plot/DataCurve.hxx	                \
			 TFEL/Plot/CurveConfigurationAction.hxx     \
			 TFEL/Plot/CurveConfigurationDialogBase.hxx \
			 TFEL/Plot/CurveConfigurationDialog.hxx     \
			 TFEL/Plot/Graph.hxx		        \
			 TFEL/Plot/GraphCurveItem.hxx               \
			 TFEL/Plot/GraphTextItem.hxx                \
			 TFEL/Plot/GraphKeyItem.hxx                 \
			 TFEL/Plot/GraphBorderItem.hxx              \
			 TFEL/Plot/GraphConfigurationDialog.hxx     \
			 TFEL/Plot/ThemeSelectionAction.hxx         \
			 TFEL/Plot/ThemeManager.ixx	                \
			 TFEL/Plot/ThemeManager.hxx	                \
			 TFEL/Plot/Grid.hxx                         \
			 TFEL/Plot/TextDataReader.hxx               \
			 TFEL/Plot/ImportTextDataDialogBase.hxx     \
			 TFEL/Plot/ImportTextDataDialog.hxx         \
			 TFEL/Plot/ImportLicosCurveDialog.hxx       \
			 TFEL/Plot/ImportAlcyoneCurveDialog.hxx     \
			 TFEL/Plot/ImportLicosResultsDialog.hxx     \
			 TFEL/Plot/ImportMTestResultsDialog.hxx     \
			 TFEL/Plot/GnuplotInterpreterBase.hxx       \
			 TFEL/Plot/GnuplotInterpreterBase.ixx       \
			 TFEL/Plot/GnuplotInterpreter.hxx           \
			 TFEL/Plot/GnuplotImportInterpreter.hxx     \
			 TFEL/Plot/GnuplotPlotInterpreter.hxx       \
			 TFEL/Plot/GnuplotSetInterpreter.hxx        \
			 TFEL/Plot/GnuplotUnSetInterpreter.hxx      \
			 TFEL/Plot/GnuplotKrigingInterpreter.hxx    \
			 TFEL/Plot/GnuplotFitInterpreter.hxx        \
			 TFEL/Plot/GraphShell.hxx

EXTRA_DIST=CMakeLists.txt
