include_directories("${PROJECT_SOURCE_DIR}/tplot/include")
include_directories("${PROJECT_SOURCE_DIR}/include")
include_directories("${TFEL_INCLUDE_PATH}")

link_directories("${PROJECT_BINARY_DIR}/src/Plot")
link_directories("${TFEL_LIBRARY_PATH}")

qt_sources(TPlot_GUI_SOURCES 
  "${PROJECT_SOURCE_DIR}/tplot/include/TFEL/Plot"
  TPlot)
if(TPLOT_ENABLE_CLI)
qt_sources(TPlot_SOURCES 
  "${PROJECT_SOURCE_DIR}/tplot/include/TFEL/Plot"
  TPlotCLIApplication
  CLIHandler)
endif(TPLOT_ENABLE_CLI)
tfel_plot_executable(tplot
  tplot-main.cxx
  ${TPlot_SOURCES})
tfel_plot_executable(tplot-gui
  tplot-gui.cxx
  ${TPlot_GUI_SOURCES})

if(TPLOT_ENABLE_CLI)
  target_link_libraries(tplot 
    ${READLINE_LIBRARY}
    Qt6::Core
    Qt6::Network)
  target_link_libraries(tplot-gui
    TFELGnuplotInterpreter
    TFELPlot
    TFELMathParser
    TFELMath
    TFELUtilities
    TFELSystem
    TFELException
    Qt6::Core
    Qt6::Widgets
    Qt6::Network
    Qt6::PrintSupport)
else(TPLOT_ENABLE_CLI)
  target_link_libraries(tplot 
    Qt6::Core)
  target_link_libraries(tplot-gui
    TFELGnuplotInterpreter
    TFELPlot
    TFELMathParser
    TFELMath
    TFELUtilities
    TFELSystem
    TFELException
    Qt6::Core
    Qt6::Widgets
    Qt6::PrintSupport)
endif(TPLOT_ENABLE_CLI)
